...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MainActivity">

    <item
        android:id="@+id/action_profile_logged"
        android:title="@string/action_profile"
        android:icon="@drawable/settings"
        app:showAsAction="always"
        android:orderInCategory="1">
        <menu>
            <item
...
    <item
        android:id="@+id/action_share_logged"
        android:title="@string/action_profile"
        android:icon="@drawable/share"
        app:showAsAction="always" />

    <item android:id="@+id/action_search"
          android:title="Search"
          android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
          app:showAsAction="ifRoom|collapseActionView"
          app:actionViewClass="android.support.v7.widget.SearchView" />

</menu>
