<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background"
              tools:context=".view.SearchBillFragment">

<android.support.v7.widget.RecyclerView
    android:layout_marginTop="65dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/recycler_view_search"/>

</LinearLayout>
