...
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/brasao"
                android:id="@+id/imageViewBrazal"
                android:layout_marginTop="15dp"
                android:layout_marginStart="18dp"
                android:layout_below="@+id/textViewTitleBill"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textViewTitleBill"
...
